--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>迷路テスト</title>
+  <meta charset="UTF-8">
+  <title>Haunted Inn Test</title>
+  <script>
+    function showBookChoice() {
+      const choice = confirm("飛ぶ？");
+      if (choice) {
+        window.location.href = "https://taittsuu.com/users/chorako_88/profiles";
+      }
+    }
+  </script>
 </head>
-<body>
-  <h1>迷路ゲーム Coming Soon...</h1>
+<body style="background:#222; color:#fff; font-family:sans-serif; text-align:center; padding-top:50px;">
+  <h1>黄色の本を調べた！</h1>
+  <button onclick="showBookChoice()">調べる</button>
 </body>
 </html>
